--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
-layout: index_layout
+layout: default
+comments: true
 ---
 
 <div class="posts">
@@ -34,3 +35,6 @@ layout: index_layout
     <span class="pagination-item newer">Newer</span>
   {% endif %}
 </div>
+{% if page.comments %}
+    {% include discuss.html %}
+{% endif %}
